--- a/package.json
+++ b/package.json
@@ -31,5 +31,13 @@
         "vue": "^2.5.17",
         "vue-loader": "^15.9.5",
         "vue-template-compiler": "^2.6.10"
+    },
+    "dependencies": {
+        "@babel/preset-react": "^7.23.3",
+        "chart.js": "^4.0.0",
+        "react": "^18.2.0",
+        "react-chartjs-2": "^5.2.0",
+        "react-dom": "^18.2.0",
+        "react-router-dom": "^6.20.1"
     }
 }
