--- a/package.json
+++ b/package.json
@@ -35,10 +35,12 @@
     "dependencies": {
         "@babel/preset-react": "^7.23.3",
         "chart.js": "^4.0.0",
+        "i18next": "^23.7.13",
         "polished": "^4.2.2",
         "react": "^18.2.0",
         "react-chartjs-2": "^5.2.0",
         "react-dom": "^18.2.0",
+        "react-i18next": "^14.0.0",
         "react-router-dom": "^6.21.0",
         "recharts": "^2.10.3"
     }
